--- a/www-admin-src/src/style.css
+++ b/www-admin-src/src/style.css
@@ -58,7 +58,7 @@ p {
 }
 
 button {
-  border-radius: 8px;
+
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
   font-size: 1em;
@@ -85,8 +85,8 @@ button:active {
 
 button:focus,
 button:focus-visible {
-  outline: 2px solid #646cff;
-  outline-offset: 2px;
+  outline: none;
+  outline-offset: 0px;
 }
 
 button:disabled {
